k8s/gitea/manifest_tls.yaml
---
# Source: gitea/templates/gitea-secrets.yaml
---
# Source: gitea/templates/gitea-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-gitea-svc
  labels: &GiteaLabels
    app.kubernetes.io/name: test
    app.kubernetes.io/component: gitea-server
spec:
  type: NodePort
  ports:
  - name: http
    port: 3000
    targetPort: 3000
    protocol: TCP
  - name: ssh    
    port: 22
    targetPort: 22
    protocol: TCP
  selector: *GiteaLabels
---
# Source: gitea/templates/postgresql-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-postgresql-svc
  labels: &PostgreSQLLabels
    app.kubernetes.io/name: test
    app.kubernetes.io/component: postgresql-server
spec:
  ports:
  - name: postgres
    port: 5432
    targetPort: 5432
  selector: *PostgreSQLLabels
  type: ClusterIP
---
# Source: gitea/templates/postgresql-services.yaml
kind: Service
apiVersion: v1
metadata:
  name: test-postgresql-exporter-svc
  labels: &PostgreSQLLabels
    app.kubernetes.io/name: test
    app.kubernetes.io/component: postgresql-server
spec:
  ports:
  - name: prometheus-exporter
    port: 9187
  selector: *PostgreSQLLabels
  type: ClusterIP
---
# Source: gitea/templates/gitea-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: test-gitea
  labels: &GiteaStatefulSetLabels
    app.kubernetes.io/name: test
    app.kubernetes.io/component: gitea-server
spec:
  replicas: 1
  selector:
    matchLabels: *GiteaStatefulSetLabels
  serviceName: test-gitea-svc
  template:
    metadata:
      labels: *GiteaStatefulSetLabels
    spec:
      securityContext:
        fsGroup: 1000
      terminationGracePeriodSeconds: 60
      containers:
        - name: gitea
          image: "gcr.io/ccm-ops-test-adhoc/gitea"
          imagePullPolicy: IfNotPresent
          ports:
            - name: ssh
              containerPort: 22
            - name: http
              containerPort: 3000          
          livenessProbe:
            tcpSocket:
              port: http
            initialDelaySeconds: 200
            timeoutSeconds: 1
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 10          
          readinessProbe:
            tcpSocket:
              port: http
            initialDelaySeconds: 5
            timeoutSeconds: 1
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 10   
          volumeMounts:
            - name: temp
              mountPath: /tmp
            - name: data
              mountPath: /data
      volumes:
        - name: init
          secret:
            secretName: test-gitea-init
            defaultMode: 110
        - name: config
          secret:
            secretName: test-gitea-config
            defaultMode: 110
        - name: inline-config-sources
          secret:
            secretName: test-gitea-inline-config
        - name: temp
          emptyDir: {}
  volumeClaimTemplates:
    - metadata:
        name: data
        labels: *GiteaStatefulSetLabels
      spec:
        accessModes:
            - ReadWriteOnce
        resources:
          requests:
            storage: "8Gi"
---
# Source: gitea/templates/postgresql-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: test-postgresql
  labels: &PostgreSQLLabels
    app.kubernetes.io/name: test
    app.kubernetes.io/component: postgresql-server
spec:
  replicas: 1
  selector:
    matchLabels: *PostgreSQLLabels
  serviceName: test-postgresql-svc
  template:
    metadata:
      labels: *PostgreSQLLabels
    spec:
      containers:
      - name: postgresql
        image: "marketplace.gcr.io/google/postgresql11"
        imagePullPolicy: IfNotPresent
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
        ports:
        - containerPort: 5432
          name: postgres
        volumeMounts:
        - name: test-postgresql-pvc
          mountPath: /var/lib/postgresql/data
      - name: prometheus-exporter
        image: marketplace.gcr.io/google/postgresql-exporter0
        imagePullPolicy: Always
        ports:
        - containerPort: 9187
          name: exporter
  volumeClaimTemplates:
  - metadata:
      name: test-postgresql-pvc
      labels: *PostgreSQLLabels
    spec:
      accessModes:
      - ReadWriteOnce
      storageClassName: standard
      resources:
        requests:
          storage: 8Gi
---
# Source: gitea/templates/gitea-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-gitea-ingress
  labels:
    app.kubernetes.io/name: test
    app.kubernetes.io/component: gitea-server
spec:
  defaultBackend:
    service:
      name: test-gitea-svc
      port:
        name: http
  tls:
  - secretName: test-tls
